# refine-llm-trading-e871-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md  download_stock_data.py
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: LLM_agents_financial_trading_stock_market_20260211_052425.jsonl  trading_horizon_time_scale_long-term_short-term_investment_LLM_20260211_052751.jsonl
papers/: README.md  selected_papers.json
papers/pages/: 2408.06361_large_language_model_agent_in_financial_manifest.txt  2505.07078v4_can_llmbased_financial_investing_strategies_outperform_manifest.txt  2508.02366_language_model_guided_reinforcement_learning_in_manifest.txt  2509.09995_quantagent_pricedriven_multiagent_llms_for_highfrequency_manifest.txt  2510.02209_stockbench_can_llm_agents_trade_stocks_manifest.txt  2510.04643_quantagents_towards_multiagent_financial_system_via_manifest.txt  (+1 more)
results/data/: baseline_results.csv  (+5 more)
src/: analyze_results.py  backtester.py  run_baselines.py  run_experiment.py  run_llm.py  strategies.py
